--- a/config.env
+++ b/config.env
@@ -9,7 +9,7 @@ TG_BOT_TOKEN = "0"
 
 # Masukan User ID untuk hak ADMINS di bot
 # Gunakan Spasi Untuk Pemisah User ID [ Untuk Multi ADMINS ]
-ADMINS = "7174931372 7042326582 5178772086 5495748574"
+ADMINS = "7174931372 6295318881 7042326582 5178772086 5495748574"
 
 # Masukan Username Telegram mu tanpa @
 OWNER = "¿"
